<resources>
    <string name="facebook_app_id" translatable="false">111111111111111</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb111111111111111</string>
    <string name="cancel">Registration with FB was cancelled</string>
    <string name="no_subscription_dialog_message">You have no active subscription. Do you want to do it wright now?</string>
    <string name="unsubscribe_dialog_message">Are you sure you want to cancel your subscription? You will no longer be able to watch Mediacast TV!</string>
    <string name="progress_spinner_message">Processing...</string>
    <string name="upgrade_choose_card_header">How would you like to pay?</string>
    <string name="upgrade_choose_card_text">You can use the same credit card\nas you have used before</string>
    <string name="upgrade_choose_card_button_this">Use this Credit Card</string>
    <string name="upgrade_choose_card_button_another">Use another credit card</string>
    <string name="upgrade_choose_card_powered_by_stripe">Secured by <b>Stripe</b></string>
    <string name="upgrade_choose_card_powered_by">Secured by</string>
    <string name="secured_by_stripe">Secured by <b>Stripe</b></string>
    <string name="trial_started">Your 7 day trial period has been started</string>
    <string name="couldnt_process">We couldn\'t process your payment</string>
    <string name="timezones_button_savetext">Save</string>
    <string name="terms_of_use_fab_button">Back</string>
    <string name="subscribed_on_apple_dialog_message">You can cancel this subscription only on iOS device</string>
    <string name="plan_settings_title">Plan settings</string>
    <string name="plan_settings_plan">Plan</string>
    <string name="plan_settings_beginned">Started</string>
    <string name="plan_settings_ends">Ends</string>
    <string name="plan_settings_days_left">Days left</string>
    <string name="plan_settings_button_upgrade">Upgrade plan</string>
    <string name="plan_settings_cancel_subscription">Cancel subscription</string>
    <string name="plan_settings_renew_button">Pick a new plan</string>
    <string name="plan_settings_renew_text">You have no active plan\nconnected to your account</string>
    <string name="plan_settings_renew_subscription">Renew your subscription</string>
    <string name="plan_settings_user_unsubscribed">You have unsubscribed</string>
    <string name="list_view_item_selected">Selected</string>
    <string name="credit_card_header">Enter your payment information</string>
    <string name="credit_card_details">Your card details</string>
    <string name="credit_card_hint_cvc">CVC</string>
    <string name="credit_card_hint_year"><font size="13">XX</font></string>
    <string name="credit_card_hint_month"><font size="13">XX</font></string>
    <string name="credit_card_expire_month">Expiration month</string>
    <string name="credit_card_expire_year">Expiration year</string>
    <string name="credit_card_number">Card number</string>
    <string name="credit_cvc_number">CVC number</string>
    <string name="credit_cvc_number_hint">---</string>
    <string name="credit_card_hint_number"><font size="13">Enter your card number</font></string>
    <string name="validationErrors">Validation Errors</string>
    <string name="validationErrors_card_number_invalid">The card number that you entered is invalid</string>
    <string name="validationErrors_expiration_date_invalid">The expiration date that you entered is invalid</string>
    <string name="validationErrors_CVC_code_invalid">The CVC code that you entered is invalid</string>
    <string name="validationErrors_card_details_invalid">The card details that you entered are invalid</string>
    <string name="spinner_processing_your_payment">Processing your payment</string>
    <string name="ok">OK</string>
    <string name="authorization_empty_email_en">Email field is empty</string>
    <string name="authorization_empty_pass_en">Password field is empty</string>
    <string name="authorization_empty_fields_en">Fields are empty</string>
    <string name="email_not_valid">E-mail is not valid</string>
    <string name="fill_all_edittexts">Please fill all the fields</string>
    <string name="fill_edittext">Please fill the field</string>
    <string name="channel_id_required">channel_id required</string>
    <string name="channel_id_invalid">channel_id invalid</string>
    <string name="channel_not_found">channel not found</string>
    <string name="channels_not_found">channels not found</string>
    <string name="channel_already_added">channel already added</string>
    <string name="lang_required">lang required</string>
    <string name="lang_invalid">lang invalid</string>
    <string name="id_required">id required</string>
    <string name="id_invalid">id invalid</string>
    <string name="access_invalid">access invalid</string>
    <string name="facebook_token_required">facebook token required</string>
    <string name="user_not_exist">user not exist</string>
    <string name="user_not_active">user not active</string>
    <string name="email_required">email required</string>
    <string name="email_invalid">email invalid</string>
    <string name="name_required">name required</string>
    <string name="last_name_required">last name required</string>
    <string name="package_id_required">package_id required</string>
    <string name="package_not_exist">package not exist</string>
    <string name="program_not_found">program not found</string>
    <string name="programs_not_found">programs not found</string>
    <string name="day_invalid">day invalid</string>
    <string name="subscription_id_required">subscription_id required</string>
    <string name="subscription_id_invalid">subscription_id invalid</string>
    <string name="subscription_invalid">subscription invalid</string>
    <string name="token_required">token required</string>
    <string name="new_password_required">new password required</string>
    <string name="new_password_length">new password length</string>
    <string name="language_invalid">language invalid</string>
    <string name="language_busy">language busy</string>
    <string name="language_required">language required</string>
    <string name="password_required">password required</string>
    <string name="password_length">password length</string>
    <string name="stripe_id_required">stripe_id required</string>
    <string name="user_exist">user exist</string>
    <string name="time_zone_required">time zone required</string>
    <string name="time_zone_invalid">time zone invalid</string>
    <string name="first_name_required">first name required</string>
    <string name="phone_required">phone required</string>
    <string name="payment_fail">payment fail</string>
    <string name="package_id_invalid">package_id invalid</string>
    <string name="package_not_found">package not found</string>
    <string name="card_not_found">card not found</string>
    <string name="card_id_required">card_id required</string>
    <string name="card_id_invalid">card_id invalid</string>
    <string name="subscription_already_cancelled">subscription already cancelled</string>
    <string name="subscription_not_found">subscription not found</string>
    <string name="alert_dialog_restart_title">Restart application?</string>
    <string name="alert_dialog_restart_message">Need to restart application for changes take effect.</string>
    <string name="programs_program_is_after">This program not started yet</string>
    <string name="month_jan">Jan</string>
    <string name="month_feb">Feb</string>
    <string name="month_mar">Mar</string>
    <string name="month_apr">Apr</string>
    <string name="month_may">May</string>
    <string name="month_jun">Jun</string>
    <string name="month_jul">Jul</string>
    <string name="month_aug">Aug</string>
    <string name="month_sep">Sep</string>
    <string name="month_oct">Oct</string>
    <string name="month_nov">Nov</string>
    <string name="month_dec">Dec</string>
    <string name="drm_error_not_supported">Protected content not supported on API levels below 18</string>
    <string name="drm_error_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="drm_error_unknown">An unknown DRM error occurred</string>
    <string name="app_name">Mediacast</string>
    <string name="date_days">days left</string>
    <string name="user_info_fail_retry">Failed to load user\'s information. Please try again later.</string>
    <string name="no_internet_connection">Check your Internet connection</string>
    <string name="repeated_pass_not_match">Repeated password not match to new one</string>
    <string name="loading">Loading...</string>
    <string name="alert_dialog_logout_title">Logout</string>
    <string name="alert_dialog_logout_text">Do you want to Logout?</string>
    <string name="authorization_email_hint"><font size="13">Enter your email</font></string>
    <string name="authorization_password_hint"><font size="13">Enter your password</font></string>
    <string name="authorization_text_forgot_password_en">Forgot your password?</string>
    <string name="authorization_text_login_to_mediacast">Login to Mediacast</string>
    <string name="authorization_text_login_with_existing_account">Login with existing account\n</string>
    <string name="authorization_text_back_to_homepage">Back to Homepage</string>
    <string name="create_acc_dialog_description">Sorry, we couldn\'t get your email from Facebook. Please enter it below:</string>
    <string name="create_acc_dialog_header">Sign up to \nstart your free week</string>
    <string name="create_acc_text_field_email">Your email</string>
    <string name="create_acc_text_field_name">Your name</string>
    <string name="create_acc_text_field_password">Your password</string>
    <string name="create_acc_hint_email"><font size="13">Please enter your email here</font></string>
    <string name="create_acc_hint_password"><font size="13">Please enter your password here</font></string>
    <string name="create_acc_hint_name"><font size="13">Please enter your name here</font></string>
    <string name="create_acc_dialog_button">Continue</string>
    <string name="activity_navigation_alert_dialog_title">Access denied</string>
    <string name="activity_navigation_alert_dialog_text">Your access to the service was denied</string>
    <string name="restore_pass">Restore password</string>
    <string name="forgot_pass_request_confirm">Confirmation E-mail has been sent</string>
    <string name="restore_pass_description">Enter your email and we will send you a link to restore your password</string>
    <string name="title_activity_activity_navigation">Navigation</string>
    <string name="title_section_channels">Channels</string>
    <string name="title_section_time_zone">Time Zone</string>
    <string name="title_section_language">Language</string>
    <string name="title_section_update_membership">Membership</string>
    <string name="title_section_change_password">Change Password</string>
    <string name="title_section_edit_profile">Profile</string>
    <string name="title_section_help">Help</string>
    <string name="title_section_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="change_pass_new_password">New Password</string>
    <string name="change_pass_repeat_password">Repeat New Password</string>
    <string name="change_pass_button_title">Change Password</string>
    <string name="edit_user_name">Name</string>
    <string name="edit_user_surname">Last Name</string>
    <string name="edit_user_phone">Phone</string>
    <string name="edit_user_confirm">Save</string>
    <string name="edit_user_description">Leave fields empty which you do not want to change</string>
    <string name="or">or</string>
    <string name="password_info">Password</string>
    <string name="email_info">Email</string>
</resources>