<?xml version="1.0" encoding="utf-8"?>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_authorization"
        tools:context=".ActivityAuthorization"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey_info_table">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/frameLayout2"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.4"
        android:layout_marginBottom="0dp">

        <include layout="@layout/info_header_logo_with_text_2"/>

    </FrameLayout>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/authorization_email_hint"
            android:ems="10"
            android:id="@+id/emailEditTextInfo"
            app:layout_constraintRight_toRightOf="@+id/frame_for_login_fb_button"
            app:layout_constraintLeft_toLeftOf="@+id/frame_for_login_fb_button"
            android:background="@drawable/my_custom_edit_text"
            android:textColor="@color/text_table_dark"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            android:layout_marginBottom="8dp"/>


        <FrameLayout
            android:id="@+id/frame_for_login_fb_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toTopOf="@+id/button_back_home"
            />

        <TextView
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintBottom_toTopOf="@+id/frame_for_login_fb_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="4dp"/>

        <Button
            android:text="@string/authorization_text_login_to_mediacast"
            style="@style/BlueInfoButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_create_info"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintLeft_toLeftOf="@+id/frame_for_login_fb_button"
            app:layout_constraintRight_toRightOf="@+id/frame_for_login_fb_button"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp"/>


    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_passwordInfo"
            android:hint="@string/authorization_password_hint"
            app:layout_constraintRight_toRightOf="@+id/frame_for_login_fb_button"
            app:layout_constraintLeft_toLeftOf="@+id/frame_for_login_fb_button"
            android:background="@drawable/my_custom_edit_text"
            android:textColor="@color/text_table_dark"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/button_create_info"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:text="@string/password_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@+id/editText_passwordInfo"
            app:layout_constraintLeft_toLeftOf="@+id/editText_passwordInfo"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"/>

        <TextView
            android:text="@string/email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/emailEditTextInfo"
            app:layout_constraintLeft_toLeftOf="@+id/emailEditTextInfo"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:text="@string/authorization_text_forgot_password_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewForgotPassword"
            app:layout_constraintRight_toRightOf="@+id/editText_passwordInfo"
            app:layout_constraintBottom_toTopOf="@+id/editText_passwordInfo"
            android:layout_marginBottom="4dp"
            android:textColor="@color/color_forgot_pass"
            android:textSize="12sp"/>

    <Button
        android:text="@string/authorization_text_back_to_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_back_home"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:background="@android:color/transparent"/>

</android.support.constraint.ConstraintLayout>



