<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.app.tv.mediacast.FragmentEditProfile">

    <TextView
        android:id="@+id/textView_edit_user_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_user_description"

        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@+id/guideline25"
        android:layout_marginEnd="40dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/editText_edit_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_user_name"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView_edit_user_description"
        app:layout_constraintTop_toBottomOf="@+id/textView_edit_user_description"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView_edit_user_description"
        android:layout_marginTop="8dp"/>


    <EditText
        android:id="@+id/editText_edit_user_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:hint="@string/edit_user_surname"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView_edit_user_description"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_edit_user_name"
        app:layout_constraintLeft_toLeftOf="@+id/textView_edit_user_description"/>


    <EditText
        android:id="@+id/editText_edit_user_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_user_phone"
        android:inputType="phone"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_edit_user_surname"
        app:layout_constraintRight_toRightOf="@+id/textView_edit_user_description"
        app:layout_constraintLeft_toLeftOf="@+id/textView_edit_user_description"/>

    <!--<TextView-->
    <!--android:id="@+id/textView_edit_user_country_title"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textColor="@color/darker_grey"-->
    <!--android:textSize="18sp"-->
    <!--android:layout_below="@id/editText_edit_user_email"-->
    <!--android:layout_marginLeft="12dp"-->
    <!--android:layout_marginTop="12dp"-->
    <!--android:text="@string/edit_user_country"-->
    <!--/>-->

    <!--<Spinner-->
    <!--android:id="@+id/spinner_countries"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/textView_edit_user_country_title"-->
    <!--android:layout_marginTop="6dp"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:drawSelectorOnTop="true"-->
    <!--android:popupBackground="@color/white"-->
    <!--style="@style/spinner_style"-->
    <!--/>-->

    <Button
        android:id="@+id/button_edit_user_confirm"
        style="@style/GrayButtonStyle"

        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/edit_user_confirm"
        app:layout_constraintRight_toRightOf="@+id/textView_edit_user_description"
        app:layout_constraintLeft_toLeftOf="@+id/textView_edit_user_description"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_edit_user_phone"
        />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline25"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="26dp"
        tools:layout_editor_absoluteX="0dp"/>

</android.support.constraint.ConstraintLayout>
