<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_info_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info.InfoCreateAccount"
    android:background="@color/background_grey_info_table">


    <!--<com.facebook.login.widget.LoginButton-->

    <!--style="@style/BlueInfoButtonStyle"-->

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/guideline4"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp"/>

    <!--android:inputType="phone"-->


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frameLayout3"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        android:layout_marginBottom="24dp">

        <include layout="@layout/subscribe_labels"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"

        android:id="@+id/frameLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp">
        <!--android:background="@drawable/header_short_1"-->
        <include layout="@layout/info_header_logo_with_text_2"/>
        <!--<include layout="@layout/info_header_logo_with_text"/>-->
        <!--android:background="@drawable/gradient_dark3"-->

    </FrameLayout>

    <TextView
        android:text="@string/upgrade_choose_card_powered_by_stripe"
        android:gravity="center"
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/useAnotherCardButton"
        app:layout_constraintRight_toRightOf="@+id/useAnotherCardButton"
        />

    <Button
        android:text="@string/upgrade_choose_card_button_another"
        style="@style/WhiteButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/useAnotherCardButton"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"/>

    <Button
        android:text="@string/upgrade_choose_card_button_this"
        style="@style/BlueInfoButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/useThisCardButton"
        app:layout_constraintBottom_toTopOf="@+id/useAnotherCardButton"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toRightOf="@+id/useAnotherCardButton"
        app:layout_constraintLeft_toLeftOf="@+id/useAnotherCardButton"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCardPlaceHolder"
        app:layout_constraintBottom_toTopOf="@+id/useThisCardButton"
        android:layout_marginBottom="32dp"
        app:layout_constraintLeft_toLeftOf="@+id/useAnotherCardButton"
        app:layout_constraintRight_toRightOf="@+id/useAnotherCardButton"
        android:gravity="center"

        android:textSize="@dimen/text_size_title"
        android:textStyle="normal|bold"/>
    <!--android:textAllCaps="true"-->

    <TextView
        android:text="@string/upgrade_choose_card_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        app:layout_constraintBottom_toTopOf="@+id/textViewCardPlaceHolder"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="@+id/useAnotherCardButton"
        app:layout_constraintLeft_toLeftOf="@+id/useAnotherCardButton"
        android:gravity="center"/>

    <!--android:background="#8f9da5"-->
    <!--style="@style/GrayButtonStyle"-->

</android.support.constraint.ConstraintLayout>