<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="fill_parent"
                                             android:layout_height="fill_parent"

                                             tools:context="com.app.tv.mediacast.FragmentChangePassword">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"

        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>


    <EditText
        android:id="@+id/editText_change_pass_new_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/change_pass_new_password"
        android:inputType="textPassword"

        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"/>


    <EditText
        android:id="@+id/editText_change_pass_repeat_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/change_pass_repeat_password"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editText_change_pass_new_pass"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_change_pass_new_pass"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editText_change_pass_new_pass"
        app:layout_constraintHorizontal_bias="0.41"/>

    <Button
        android:id="@+id/button_change_pass_confirm"
        style="@style/GrayButtonStyle"

        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/change_pass_button_title"
        app:layout_constraintRight_toRightOf="@+id/editText_change_pass_new_pass"
        app:layout_constraintLeft_toLeftOf="@+id/editText_change_pass_new_pass"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_change_pass_repeat_pass"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline10"

        app:layout_constraintGuide_percent="0.35"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="179dp"
        tools:layout_editor_absoluteX="0dp"/>

</android.support.constraint.ConstraintLayout>
